--- a/src/app/board/board.component.css
+++ b/src/app/board/board.component.css
@@ -60,6 +60,13 @@
   text-align: center;
 }
 
+footer {
+  text-align: center;
+  margin-top: 20px;
+  font-size: 14px;
+  color: #666;
+}
+
 .quote-container {
   margin-top: 20px;
   padding: 20px;
